 /* $Id: changelog,v 1.1033 2000-07-16 23:18:14 bird Exp $ */

 2000-07-16: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k:   Created a development branch called "Grace" and checked my
                current code in into it. (This is the reason why there are
                some new files in the src/win32k tree.)

 2000-07-15: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   XWing vs Tie Fighter fix broke RealPlayer 7 setup (missing buttons)
                -> rewrote RDW_INVALIDATE code in RedrawWindow to work for
                both applications
    - KERNEL32: Added extra check in isPEImage method
                lpNumberOfBytesRead/Written can be NULL in Read/WriteFile

    - PELDR:    Fix for arguments with quotes (first and last quote removed)
                (i.e. pe rnuninst "RealNetworks|RealPlayer|6.0| -i -p")
                Fix for exe name with dir containing spaces

 2000-07-12: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
    - KERNEL32: Implemented handlemanager support for named and unnamed pipes

 2000-07-10: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: Don't try to search for resources if the module doesn't contain any

 2000-07-09: Patrick Haller <phaller@gmx.net>
    - doc:      Moved several documents to the new doc directory and
                created initial version of "ToDo.txt". We should place
                our open tasks in there for better overview and to be able
                to assign priorities and people to them.

 2000-07-07: Sander van Leeuwen <sandervl@xs4all.nl>
    - NTDLL:    Bugfix for NtQueryInformationToken (TOKEN_USER); updated
                with latest Wine code (TODO: NTDLL needs to be resynced)

 2000-07-06: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: Store user default language in thread database struct
                Set/GetThreadLocale change/return this LCID value
                Fixed EnumSystemLocalesA/W; now returns default user language id